<resources>
    <string name="app_name">HummingBird</string>
    <string name="title_activity_maps">Humming Bird Navigation</string>
    <string name="title_activity_place">PlaceActivity</string>
    <string name="action_settings">Settings</string>

    <string name="autocomplete_hint">Enter place name or address</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="clear_text">Clear Text</string>

    <string name="title_activity_planning">Plan</string>
    <string name="plan_from_title"> From </string>
    <string name="plan_to_title"> To </string>
    <!-- key definition to pass from and to argument -->
    <!--<string name="intent_plan_key_from">arg_intent_key_plan_from</string>-->
    <!--<string name="intent_plan_key_to">arg_intent_key_plan_to</string>-->
    <!-- key definition to pass detail route id -->
    <!--<string name="intent_route_key">arg_intent_key_route_no</string>-->
    <string name="init_search_here">Here</string>
    <string name="init_depart_time">Depart Now</string>
    <string name="title_activity_detail_route">Details</string>
    <string name="title_activity_navigate">Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="product_name_title">Hummingbird Navigation</string>
    <string name="up">Up</string>
    <string name="home">home</string>
    <string name="nav_favorite_title">Favorites</string>
    <string name="dialog_favorite_positive">Save</string>
    <string name="dialog_favorite_negative">@android:string/cancel</string>
    <string name="dialog_favorite_title">My Favorite Routes</string>
    <string name="dialog_favorite_message">Save favorite route?</string>
    <string name="dialog_favorite_remove">Remove</string>
    <string name="dialog_favorite_remove_title">My Favorite Routes</string>
    <string name="dialog_favorite_remove_message">Remove from My Favorite Routes?</string>
    <string name="dialog_confirm_home_title">Stop Navigation?</string>
    <string name="dialog_confirm_home_positive">@android:string/yes</string>
    <string name="dialog_confirm_home_negative">@android:string/cancel</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_favorite">Favorites</string>
    <string name="title_activity_history">Recent</string>
    <string name="title_activity_settings">Settings</string>

    <string name="widget_recent_title">Hummingbird</string>
    <string name="widget_recent_title_description">recent locations</string>
    <string name="empty_recent_list">No Recent Places</string>
    <string name="default_location_title">Here</string>
    <string name="favorite_no_selected_item">No selected item!</string>
    <string name="time_format_simple" translatable="false">hh:mm aa</string>
    <string name="time_format_with_date" translatable="false">MMM dd hh:mm aa</string>
    <string name="time_format_with_year" translatable="false">MMM dd yyyy hh:mm aa</string>
    <string name="depart_view_title">"Depart "</string>
    <string name="departure_time">"Departure Time "</string>
    <string name="duration">"Duration "</string>
    <string name="navigate_description">Navigate</string>
    <string name="add_favorite_description">add to favorite list</string>
    <string name="remove_favorite_description">remove from favorite list</string>
    <string name="navigate_next_description">navigate next</string>
    <string name="navigate_previous_description">navigate previous</string>
    <string name="sync_my_location_description">synchronize my location</string>
    <string name="street_view_description">switch to street view</string>
    <string name="map_view_description">switch to map view</string>
    <string name="search_button_description">start search</string>
    <string name="powered_by_google_description">powered by google</string>
    <!--<string name="from_location_description">enter from location</string>-->
    <!--<string name="to_location_description">enter to location</string>-->
    <string name="start_navigate_search_description">start navigate to a location</string>
    <string name="favorite_toolbar_description">favorite list</string>
    <string name="activity_history_description">recent locations</string>
    <string name="favorite_dialog_name_description">enter name for favorite</string>
    <string name="route_detail_description">route details</string>
    <string name="travel_icon_walk_description">walking</string>
    <string name="travel_icon_train_description">take train</string>
    <string name="travel_icon_bus_description">take bus</string>
    <string name="walk_description">"walk "</string>
    <string name="train_description">"take train "</string>
    <string name="bus_description">"take bus "</string>
    <string name="bus_stops">" stops"</string>
    <string name="bus_stop">" stop"</string>
    <string name="direction_preferences">Directions</string>

    <string name="pref_units_label">Distance Units</string>
    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_label_imperial">Imperial</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>
    <string name="pref_units_default_value" translatable="false">@string/pref_units_label_metric</string>
    <string name="pref_units_summary">@string/pref_units_default_value</string>

    <string name="pref_direction_status_key" translatable="false">direct_status_key</string>


    <string name="pref_language_label">Instruction Language</string>
    <string name="pref_language_label_english">English</string>
    <string name="pref_language_label_japanese">Japanese</string>
    <string name="pref_language_label_chinese_traditional">Chinese(Traditional)</string>
    <string name="pref_language_label_chinese_simplified">Chinese(Simplified)</string>
    <string name="pref_language_label_french">French</string>
    <string name="pref_language_key" translatable="false">language</string>
    <string name="pref_language_english" translatable="false">en</string>
    <string name="pref_language_japanese" translatable="false">ja</string>
    <string name="pref_language_chinese_traditional" translatable="false">zh-TW</string>
    <string name="pref_language_chinese_simplified" translatable="false">zh-CN</string>
    <string name="pref_language_french" translatable="false">efr</string>
    <string name="pref_language_default_value" translatable="false">@string/pref_language_english</string>
    <string name="pref_language_summary">@string/pref_language_label_english</string>
    <!-- Strings related to Settings -->

    <!--<string name="pref_title_add_friends_to_messages">Add friends to messages</string>-->
    <!--<string-array name="pref_example_list_titles">-->
        <!--<item>Always</item>-->
        <!--<item>When possible</item>-->
        <!--<item>Never</item>-->
    <!--</string-array>-->
    <!--<string-array name="pref_example_list_values">-->
        <!--<item>1</item>-->
        <!--<item>0</item>-->
        <!--<item>-1</item>-->
    <!--</string-array>-->

    <string name="route_summary_transition" translatable="false">route_summary</string>
    <string name="menu_settings_title">Settings</string>
    <string name="menu_history_title">History</string>
    <string name="menu_favorite_title">Favorites</string>
    <string name="you_are_here_title">You Are Here</string>
    <string name="network_error_title">Network Error</string>
    <string name="network_error_message">Internet connection not available.</string>
    <string name="dialog_network_positive">@android:string/yes</string>
    <string name="location_service_error_title">Location Service</string>
    <string name="location_service_error_message">Location Service not available.</string>
    <string name="pref_key_location_request_flag">pref_key_location_request_flag</string>
    <string name="empty_route_no_route">No route found.</string>
    <string name="empty_route_network_error">Network Error.</string>
    <string name="empty_route_no_server_down">Server Down.</string>
    <string name="empty_route_no_server_invalid">Server Invalid.</string>
    <string name="empty_route_unknown"></string>
    <string name="LINE_SEPARATOR" translatable="false">line.separator</string>
    <string name="share_name_connector">" to "</string>
    <string name="share_departure_title">"departure: "</string>
    <string name="share_duration_title">"duration: "</string>
</resources>
