<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<com.example.android.sunshine.app.LocationEditTextPreference-->
        <!--android:title="@string/pref_location_label"-->
        <!--android:key="@string/pref_location_key"-->
        <!--android:defaultValue="@string/pref_location_default"-->
        <!--android:inputType="text"-->
        <!--android:singleLine="true"-->
        <!--custom:minLength="3"/>-->

    <ListPreference
        android:key="@string/pref_units_key"
        android:summary="@string/pref_units_summary"
        android:title="@string/pref_units_label"
        android:defaultValue="@string/pref_units_metric"
        android:entryValues="@array/pref_units_values"
        android:entries="@array/pref_units_options" />

    <ListPreference
        android:key="@string/pref_language_key"
        android:summary="@string/pref_language_summary"
        android:title="@string/pref_language_label"
        android:defaultValue="@string/pref_language_english"
        android:entryValues="@array/pref_language_values"
        android:entries="@array/pref_language_options" />

</PreferenceScreen>
