<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/transparent"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:id="@+id/recent_widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center"
            android:src="@drawable/ic_humming_bird"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/widget_recent_title_description"
            android:text="@string/widget_recent_title"
            android:textStyle="italic"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:gravity="center_horizontal">
        </TextView>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id = "@+id/widget_recent_list"
        android:divider="@android:color/transparent"
        android:dividerHeight="3sp"
        tools:listitem="@layout/widget_recent_list_item"
        />
    <TextView
        android:id="@+id/widget_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:textAppearance="?android:textAppearanceMedium"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/empty_recent_list"
        android:text="@string/empty_recent_list"/>

</LinearLayout>