<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PlanningActivity"
    android:fitsSystemWindows="true"
    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/plan_action_bar_size"
        android:id="@+id/app_bar_layout"
        android:theme="@style/AppTheme.AppBarOverlay">

    <FrameLayout
        android:id="@+id/up_container"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <!--android:layout_height="@dimen/plan_action_bar_size"-->
        <!--<android.support.v7.widget.Toolbar-->
            <!--android:id="@+id/toolbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="?attr/actionBarSize"-->
            <!--android:background="?attr/colorPrimary"-->
            <!--app:popupTheme="@style/AppTheme.PopupOverlay" >-->
        <!--</android.support.v7.widget.Toolbar>-->

        <ImageButton
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:id="@+id/action_up"
            android:layout_width="56dp"
            android:layout_height="?actionBarSize"
            android:background="?selectableItemBackgroundBorderless"
            android:tint="#ffffff"
            android:contentDescription="@string/up"
            android:src="@drawable/ic_arrow_back_black" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/from_container"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_from_title"
                android:contentDescription="@string/plan_from_title"
                android:id="@+id/title_from"
                android:textColor="@color/colorGrey"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fromTextView"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/text_reverse"
                android:text="Here"
                android:textSize="20sp"
                android:maxLines="1"
                android:layout_toRightOf="@id/title_from"
                android:layout_toEndOf="@id/title_from"
                />
            <!--android:layout_centerHorizontal="true"-->
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/to_container"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_to_title"
                android:contentDescription="@string/plan_to_title"
                android:id="@+id/title_to"
                android:textColor="@color/colorGrey"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toTextView"
                android:layout_weight = "0"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/text_reverse"
                android:text="UBC. This is a very long line address for UBC to display"
                android:maxLines="1"
                android:layout_toRightOf="@id/title_to"
                android:layout_toEndOf="@id/title_to"
                android:textSize="20sp" />
        </RelativeLayout>
        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/departTextView"-->
            <!--android:layout_marginLeft="40dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:layout_marginRight="40dp"-->
            <!--android:background="@color/colorPrimaryDark"-->
            <!--android:textColor="@color/text_reverse"-->
            <!--android:textSize="20sp"-->
            <!--android:text="@string/init_depart_time"-->
            <!--android:textAlignment="center" />-->
        </LinearLayout>

    </FrameLayout>
    </android.support.design.widget.AppBarLayout>
    <include layout="@layout/content_planning" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
        <!--android:layout_gravity="bottom"-->
    </com.google.android.gms.ads.AdView>

</android.support.design.widget.CoordinatorLayout>
